  boot loader to be located at sector 2. If you pass this option the default
  value of 2, it has the effect of reducing the padding placed between the
  main partition table and the first usable sector value created by the
  Linux fdisk tool.

- Updated man pages with new recommendations for ESP and BIOS Boot Partition
  sizes.

- Added two type codes for the Open Network Install Environment (ONIE):
  0xe100 (7412F7D5-A156-4B13-81DC-867174929325) and 0xe101
  (D4E6E2CD-4469-46F3-B5CB-1BFF57AFC149).

- Added thirteen type codes for Android partitions (0xa000 through
  0xa00c).

- Added type code for QNX6 (aka QNX Power-Safe) filesystem: 0xb300, for
  CEF5A9AD-73BC-4601-89F3-CDEEEEE321A1.

- Removed stray debug message ("REALLY setting name!") from sgdisk,
  when setting new name via -c option.

1.0.1 (10/18/2015):
-------------------

- Created uninstall-fixparts and uninstall-gdisk scripts for OS X. As the
  names imply, these scripts remove the files installed by the fixparts and
  gdisk packages, respectively.

- Fixed bug that caused -N/--largest-new option to sgdisk to fail when
  fed a "0" option.

- Fixed bug that caused input glitches in EFI version of gdisk.

- Fixed bug that caused sgdisk to not return an appropriate error code
  when it encountered a write error when saving changes.

- Fixed bug that caused cgdisk's "Info" display to under-report the
  partition's size by one sector.

- OS X 10.11 includes new security features that prevent GPT fdisk from
  working unless these features are disabled. To do so, you must boot to a
  Recovery HD system, open a Terminal, type "csrutil disable", and reboot
  into the normal system. You can re-enable the security features by
  repeating the process, but specify "enable" rather than "disable". I've
  added a message pointing users to a Web page explaining how to disable
  this feature when gdisk detects that it can't write to the disk under OS